# currency_exchange

./: BTC_USDT_ASK_TEST.csv  CMakeLists.txt  CSVReader.cpp  DOGE_BTC_ASK_TEST.csv  DOGE_BTC_ASK_TEST.xlsx  ETH_BTC.csv  ETH_BTC_ASK_TEST.csv  ETH_BTC_ASK_TEST.xlsx  ETH_BTC_TEST_ASK_2.csv  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  SearchObject.cpp  SearchObject.h  SearchObjectTimeStamp.cpp  SearchObjectTimeStamp.h  candelstick.h  candlestick.cpp  data-new.csv
